--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: whitesmoke;
+  color: #45433C;
   margin: auto;
   font-size: 18px;
   box-sizing: border-box;
